<resources>
    <string name="app_name">My Home</string>
    <string name="fan_text">fan</string>
    <string name="tubeLight_text">tube light</string>
    <string name="nightLight_text">night light</string>
    <string name="dummyLight_text">dummy light</string>
    <string name="mqtt_status_text">Disconnected</string>
    <string name="syncButton">Sync</string>

    <string name="new_titleText">bedroom</string>
    <string name="title_activity_room">room</string>

    <string name="mainHeader">My Home</string>

    <!-- Mqtt Broker Connection Layout -->
    <string name="Mqtt_setup_header">Mqtt Setup</string>
    <string name="Mqtt_auth_header">Authentication</string>
    <string name="Mqtt_subTopic_header">Sub Topics</string>
    <string name="host_address">Host</string>
    <string name="shared_prefs_key_host">host</string>
    <string name="host_port">Port</string>
    <string name="shared_prefs_key_port">port</string>
    <string name="client_id">Client Id</string>
    <string name="shared_prefs_key_clientid">client</string>
    <string name="client_username">Username</string>
    <string name="shared_prefs_key_username">username</string>
    <string name="client_password">Password</string>
    <string name="shared_prefs_key_password">password</string>
    <string name="subTopic">Topic</string>
    <string name="shared_prefs_key_subTopics">subTopics</string>
    <string name="shared_prefs_key_config">config</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>

    <!-- Default fragment layout -->
    <string name="default_fragment_header">Ahoy!</string>
    <string name="default_text_paragraph">
        Welcome to \"My Home\" app.\n\nYou are seeing this screen because you have not entered the MQTT broker credentials yet. Please click on the settings icon on top right of this screen to enter MQTT credentials to start.\n\n

        Thank you!\n
        My Home Team

    </string>
    <string name="button_unavailable">unavailable</string>

</resources>
