<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Host and Port -->
    <TextView
        android:id="@+id/mqtt_textView"
        style="@style/mqttHeadingText"
        android:layout_marginTop="16dp"
        android:text="@string/Mqtt_setup_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mqtt_setup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mqtt_textView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/text_host"
                style="@style/mqttText"
                android:text="@string/host_address"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:inputType="textUri"
                android:hint="192.168.0.99"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView5"
                style="@style/mqttText"
                android:text="@string/host_port"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:inputType="number"
                android:hint="1883"
                android:layout_weight="3"/>

        </LinearLayout>
    </LinearLayout>


    <!-- Authentication -->
    <TextView
        android:id="@+id/auth_textView"
        style="@style/mqttHeadingText"
        android:layout_marginTop="16dp"
        android:text="@string/Mqtt_auth_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mqtt_setup_layout" />

    <LinearLayout
        android:id="@+id/mqtt_auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_textView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/text_username"
                style="@style/mqttText"
                android:text="@string/client_username"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:hint="enter username"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView_password"
                style="@style/mqttText"
                android:text="@string/client_password"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="enter password"
                android:layout_weight="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView_clientId"
                style="@style/mqttText"
                android:text="@string/client_id"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText_clientId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:ems="10"
                android:inputType="text"
                android:hint="must be unique"
                android:layout_weight="3"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Subscribe Topics -->
    <TextView
        android:id="@+id/subTopics_textView"
        style="@style/mqttHeadingText"
        android:text="@string/Mqtt_subTopic_header"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mqtt_auth_layout" />

    <LinearLayout
        android:id="@+id/subTopicLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTopics_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/text_subTopic"
                style="@style/mqttText"
                android:layout_weight="1"
                android:text="@string/subTopic" />

            <EditText
                android:id="@+id/editText_subTopic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="3"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="in CSV format"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:weightSum="4">

            <TextView
                android:id="@+id/hintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                android:layout_weight="3"
                android:text="for Tasmota, stat/# and tele/# will do." />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ok_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTopicLayout">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CANCEL"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"
            android:textAlignment="center"
            android:textSize="24sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>